--- a/Resources/Private/Language/fr.locallang_db.xlf
+++ b/Resources/Private/Language/fr.locallang_db.xlf
@@ -74,6 +74,10 @@
             <trans-unit id="tx_tw_eprivacy_eprivacy.description" approved="yes">
                 <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of them.</source> <target state="translated">Formulaire avec liste des sujets ePrivacy enregistrés, incluant un moyen de donner ou de retirer son consentement pour chacun d'eux
 </target></trans-unit>
+            <trans-unit id="tt_content.tx_tweprivacy_consent" approved="yes">
+                <source>Needs cookie consent</source>
+                <target>Nécessite le consentement des cookies</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
