--- a/Resources/Private/Language/en.locallang_db.xlf
+++ b/Resources/Private/Language/en.locallang_db.xlf
@@ -11,6 +11,10 @@
             <trans-unit id="common.privacy" approved="yes">
                 <source>Privacy Policy Page (ID)</source>
             <target state="translated">Privacy Policy Page (ID)</target></trans-unit>
+            <trans-unit id="common.pluginPid">
+                <source>Plugin Page (ID)</source>
+                <target>Plugin Page (ID)</target>
+            </trans-unit>
             <trans-unit id="cookie" approved="yes">
                 <source>Consent Cookie</source>
             <target state="translated">Consent Cookie</target></trans-unit>
