--- a/Resources/Private/Language/en.locallang.xlf
+++ b/Resources/Private/Language/en.locallang.xlf
@@ -21,6 +21,10 @@
 				<source>Accept necessary only</source> <target state="translated">Accept necessary only</target></trans-unit>
 			<trans-unit id="eprivacy.update.reset" approved="yes">
 				<source>Reset</source> <target state="translated">Reset</target></trans-unit>
+			<trans-unit id="content.needsConsent.text">
+				<source>A content was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</source>
+				<target>The content "%s" was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
